package com.example.backend.shipmentsubdomain.datalayer;

public enum Country {
    CA,
    USA
}
