package com.example.backend.shipmentsubdomain.datalayer.shipment;


public enum Status {
    QUOTED,
    LOADING,
    TRANSIT,
    DELIVERED
}
